<resources>
    <string name="next">下一个</string>
    <string name="input_password">请输入您的密码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="login_password">输入飞鸽登陆密码</string>
    <string name="forget_psw">忘记密码</string>
    <string name="change_way_login">切换登录方式</string>
    <string name="register_accout">注册账号</string>
    <string name="register">注册</string>
    <string name="input_accout">请输入您的账号</string>
    <string name="accout_empty">账号不能为空</string>
    <string name="job_num_empty">工号不能为空</string>
    <string name="input_right_phone_num">请输入正确手机号</string>
    <string name="input_right_identify_code">请输入正确验证码</string>
    <string name="password_empty">密码不能为空</string>
    <string name="nick_empty">昵称不能为空</string>
    <string name="phone_empty">手机号不能为空</string>
    <string name="code_empty">验证码不能为空</string>
    <string name="input_job_num">请输入您的工号</string>
    <string name="input_nick">请输入您的昵称</string>
    <string name="input_phone_num">请输入您的手机号码</string>
    <string name="input_identity_code">请输入验证码</string>
    <string name="get_identify_code">获取验证码</string>
    <string name="input_accout_lose_psw">请输入需要找回密码的账号</string>
    <string name="sent_identify_code">已发送验证码到：(%s)</string>
    <string name="identify_now">立即验证</string>
    <string name="login_by_phone_num">手机号登录</string>
    <string name="identity_msg">验证信息</string>

    <string name="login_ing">正在登录...</string>
    <string name="deal_with_ing">正在处理...</string>

    <string name="no_network_connection">当前无网络，请检查网络连接</string>
    <string name="connection_out_time">连接超时，请检查网络连接</string>


    <string name="clear_odd_files">清除旧文件</string>
    <string name="cache_hint">飞鸽占不到10%的存储空间，建议不要清理</string>
    <string name="clear_memory">清理内存空间</string>
    <string name="check_all">全选</string>

    <string name="chats_send_by_enter">回车时发送消息</string>
    <string name="chats_attention">接受对方发送的抖动</string>
    <string name="chats_attention_sound">抖动声音 选择铃声</string>

    <string name="tab_message">消息</string>
    <string name="tab_contacts">通讯录</string>
    <string name="tab_work">工作中心</string>
    <string name="tab_me">个人中心</string>
    <string name="tab_setting">设置</string>


    <string name="message_remind">消息提醒</string>
    <string name="chat">聊天</string>
    <string name="general">通用</string>
    <string name="identify">实名认证</string>
    <string name="account_and_safe">账号和安全</string>
    <string name="about_fg">关于飞鸽</string>
    <string name="help_and_feedback">帮助和反馈</string>
    <string name="clear_cache">清除缓存</string>
    <string name="refresh_data">数据刷新</string>
    <string name="login_out">退出登录</string>


    <string name="moments">朋友圈</string>
    <string name="collection">收藏</string>
    <string name="gallery">相册</string>
    <string name="netdisk">个人网盘</string>
    <string name="bad_network">咦？咋木有网了呢~</string>
    <string name="load_again">重新加载~</string>
    <string name="welcome_to_work">欢迎使用智能移动办公的一天</string>

    <string name="search_contact">搜索联系人</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_success">刷新成功</string>

    <string name="new_friend">新的朋友</string>
    <string name="groups">群组</string>
    <string name="group_friend">好友分组</string>
    <string name="customer_service">IT客服</string>
    <string name="self">自己</string>

    <string name="accout">账号</string>
    <string name="phone_num">手机号</string>
    <string name="nick">昵称</string>
    <string name="real_name">姓名</string>
    <string name="department">部门</string>
    <string name="select_search_type">选择搜索类型</string>
    <string name="search_hint_accout_nick">请输入账号/昵称</string>
    <string name="search_hint_accout">请输入账号</string>
    <string name="search_hint_nick">请输入昵称</string>
    <string name="search_hint_phone_num">请输入手机号码</string>
    <string name="search_hint_real_name">请输入对方姓名</string>
    <string name="search_hint_department">请输入对方部门</string>
    <string name="search_friend">好友搜索</string>

    <string name="accout_inexist">账号不存在</string>
    <string name="accout_or_psd_error">账号或者密码错误，无法登录</string>
    <string name="psd_error">密码错误，无法登录</string>
    <string name="accout_was_banned">账号被禁止登录，请联系管理员</string>

    <!-- 个人中心-->
    <string name="zam">点赞</string>
    <string name="comment">评论</string>
    <string name="show_this_to_some">提醒谁看</string>
    <string name="input_your_mind">说出你此刻的想法...</string>
    <string name="click_to_change_theme">点击可更换主题</string>

    <string name="circle_friend">朋友圈</string>
    <string name="action_text">文字</string>
    <string name="action_picture">图片</string>
    <string name="action_video">小视频</string>

    <!-- 个人中心 end-->

    <!-- 工作中心-->

    <string name="data_center">数据中心</string>
    <string name="unread_log">未读日志</string>
    <string name="pending_approval">待我审批</string>
    <string name="my_process">我的流程</string>
    <string name="camera_permission_confirmation">需要相机权限</string>
    <string name="camera_permission_not_granted">无法获取相机权限</string>
    <string name="picture_taken">拍照成功</string>
    <string name="sign_in_outer">外出打卡（%1$s）</string>
    <string name="sign_in_address">地址：%1$s</string>
    <string name="sign_in_people">汇报人：%1$s</string>
    <string name="sign_in_toast">10分钟内只能打卡一次！</string>

    <string name="clock_in_no_record">哎呀！暂无打卡记录</string>
    <string name="employee_id">工号</string>
    <string name="id">身份证</string>
    <string name="up_id_card_description">上传身份证相关照片，当验证通过后，可以查看自己的工资详情</string>
    <string name="handle_idcard">手持正面照</string>
    <string name="positive_idcard">正面</string>
    <string name="negetive_idcard">反面</string>

    <!-- 工作中心 end-->


    <string name="action_muc">发起群聊</string>
    <string name="add_friends">添加好友</string>
    <string name="action_scan">扫一扫</string>

    <string name="scan">扫描</string>
    <string name="my_location">我的位置</string>


    <string name="avatar">头像</string>
    <string name="already_identify">已认证信息</string>
    <string name="user_qrcode">二维码</string>
    <string name="factroy_address">厂区</string>
    <string name="sex">性别</string>
    <string name="employee_duty">职责</string>
    <string name="employee_job">职务</string>

    <string name="pwd_no_conrect">请输入正确的密码</string>
    <string name="input_new_pwd">输入新密码</string>
    <string name="comfirm_new_pwd">确认新密码</string>
    <string name="upload_failed">上传失败</string>
    <string name="hint_add_mark">轻触添加标签</string>
    <string name="all_labels">所有标签</string>
    <string name="txt_cirlce_already_delete">该条朋友圈已经删除，无法查看</string>
    <string name="logout_now">立即退出</string>
    <string name="conflit_hint">您的账号在其他手机登陆，%1$s秒之后，将自动退出到登陆页面，请见谅</string>
    <string name="account_disabled">您的账号出现异常，%1$s秒之后，将自动退出到登陆页面，请见谅</string>
    <string name="practice_right_now">立即体验</string>
    <string name="permit_login">允许登录</string>
    <string name="permit_login_content">是否允许%s获取你的飞鸽账号信息</string>

    <string name="secret_chat">密聊</string>
    <string name="open_pwd_set">密码设置</string>
    <string name="pwd_set">请设置密码</string>
    <string name="new_pwd_set">新密码设置</string>
    <string name="close_pwd_lock">关闭密码锁</string>
    <string name="old_pwd_to_close">输入旧密码以关闭密码锁</string>
    <string name="old_pwd">输入旧密码</string>
    <string name="change_safe_pwd">更改安全密码</string>
    <string name="pwd_set_success">密码设置成功</string>
    <string name="confirem_pwd">两次输入密码不一致，请重新确认</string>
    <string name="freeze_account">账号已被冻结</string>
    <string name="safe_pwd_lock">安全密码锁定</string>
    <string name="pwd_closed">密码锁已关闭</string>
    <string name="safe_pwd_change_success">安全密码更改成功</string>
    <string name="input_new_pwd_again">请再次输入新密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="old_pwd_wrong">旧密码不正确，请重新输入</string>
    <string name="printlock_unopen">指纹解锁未开启</string>
    <string name="printlock_open_success">指纹解锁成功!</string>
    <string name="printlock_open_fail">指纹识别识别，请重试!</string>
    <string name="printlock_open_fail_wait">指纹识别错误,等待几秒之后再重试!</string>
    <string name="version_toolow">系统版本过低</string>
    <string name="device_no_support">此设备不支持指纹解锁</string>
    <string name="input_print">您还没有录制指纹，请录入！</string>
    <string name="long_press_to_open">请进行指纹识别，长按指纹解锁键</string>
    <string name="long_press_open">指纹识别已经开启，长按指纹解锁键</string>

    <string name="collect_voice_not_support">收藏的语音不支持转发</string>
    </resources>
