<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="60dp"
  android:background="@drawable/shape_tab_bg"
  android:orientation="horizontal">

  <FrameLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <com.lensim.fingerchat.fingerchat.view.CustomTabView
      android:id="@+id/tab_msg"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="8dp"
      app:tabClickIcon="@drawable/tab_message_click"
      app:tabColor="?attr/colorPrimary"
      app:tabIcon="@drawable/tab_message"
      app:tabText="@string/tab_message"
      app:tabTextSize="12sp" />
    <TextView
      android:id="@+id/tv_msg_unread"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginLeft="10dp"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/ease_unread_count_bg"
      android:gravity="center"
      android:textColor="@color/white"
      android:visibility="invisible" />
  </FrameLayout>
  <FrameLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1">

    <com.lensim.fingerchat.fingerchat.view.CustomTabView
      android:id="@+id/tab_contact"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="8dp"
      app:tabClickIcon="@drawable/tab_contact_click"
      app:tabColor="?attr/colorPrimary"
      app:tabIcon="@drawable/tab_contact"
      app:tabText="@string/tab_contacts"
      app:tabTextSize="12sp" />
    <TextView
      android:id="@+id/tv_contact_unread"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginLeft="10dp"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/ease_unread_count_bg"
      android:gravity="center"
      android:visibility="invisible" />
  </FrameLayout>
  <com.lensim.fingerchat.fingerchat.view.CustomTabView
    android:id="@+id/tab_work"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:padding="8dp"
    app:tabClickIcon="@drawable/tab_work_click"
    app:tabColor="?attr/colorPrimary"
    app:tabIcon="@drawable/tab_work"
    app:tabText="@string/tab_work"
    app:tabTextSize="12sp" />
  <FrameLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <com.lensim.fingerchat.fingerchat.view.CustomTabView
      android:id="@+id/tab_me"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="8dp"
      app:tabClickIcon="@drawable/tab_setting_click"
      app:tabColor="?attr/colorPrimary"
      app:tabIcon="@drawable/tab_setting"
      app:tabText="@string/tab_me"
      app:tabTextSize="12sp" />
    <TextView
      android:id="@+id/tv_me_unread"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginLeft="10dp"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/ease_unread_count_bg"
      android:gravity="center"
      android:textColor="@color/white"
      android:visibility="invisible" />
  </FrameLayout>

  <FrameLayout
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1">
    <com.lensim.fingerchat.fingerchat.view.CustomTabView
      android:id="@+id/tab_setting"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="8dp"
      app:tabClickIcon="@drawable/tab_setting_click"
      app:tabColor="?attr/colorPrimary"
      app:tabIcon="@drawable/tab_setting"
      app:tabText="@string/tab_setting"
      app:tabTextSize="12sp" />

    <TextView
      android:id="@+id/tv_setting_unread"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      android:layout_marginLeft="10dp"
      android:layout_gravity="center_horizontal"
      android:background="@drawable/ease_unread_count_bg"
      android:gravity="center"
      android:textColor="@color/white"
      android:visibility="invisible" />
  </FrameLayout>

</LinearLayout>