<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--<include-->
    <!--android:id="@+id/inputinfo_toolbar"-->
    <!--layout="@layout/toolbar"/>-->

    <com.lensim.fingerchat.commons.toolbar.FGToolbar
        android:id="@+id/viewTitleBar"
        style="@style/FGToolbarStyle"/>

    <EditText
        android:id="@+id/mInputInfoOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="8dp"
        android:background="@drawable/edittext_bg"
        android:textColor="@color/primary_text"
        android:textSize="18sp"/>


    <LinearLayout
        android:id="@+id/mInputInfoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edittext_bg"
        android:orientation="horizontal"
        android:visibility="gone">
        <EditText
            android:id="@+id/mInputInfo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:background="@android:color/transparent"
            android:inputType="textPassword"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            />
        <TextView
            android:id="@+id/mInputInfoHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:text="@string/pwd_no_conrect"
            android:textColor="@color/red"
            android:textSize="12sp"
            android:visibility="gone"/>
    </LinearLayout>

    <EditText
        android:id="@+id/mInputInfoNewPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="8dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/input_new_pwd"
        android:inputType="textPassword"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:visibility="gone"/>
    <EditText
        android:id="@+id/mInputInfoNewPwdComfrim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="8dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/comfirm_new_pwd"
        android:inputType="textPassword"
        android:textColor="@color/primary_text"
        android:textSize="18sp"
        android:visibility="gone"/>

    <Button
        android:id="@+id/mInputInfoSubmit"
        style="@style/login_Font"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/chat_send_button_bg"
        android:gravity="center"
        android:text="@string/action_done"
        android:textColor="#ffffffff"
        android:textSize="17.0sp"/>
</LinearLayout>