<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_54">
                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="@dimen/dimen_54"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true"
                    android:background="@color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/login_logo"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_alignParentBottom="true"
                    android:layout_toRightOf="@+id/iv_logo"
                    android:padding="3dp"
                    android:background="@color/custom_divider_color"
                    android:text="内网"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:visibility="gone"/>
            </RelativeLayout>


            <include
                layout="@layout/layout_divider"
                android:layout_width="match_parent"
                android:layout_height="1.0px"
                android:layout_marginTop="32dp"/>


            <include
                android:id="@+id/viewInputAccout"
                layout="@layout/controller_login_item"/>

            <include layout="@layout/layout_divider"/>


            <include
                android:id="@+id/viewInputPsw"
                layout="@layout/controller_login_psw_item"/>

            <include layout="@layout/layout_divider"/>


            <include
                android:id="@+id/viewLoginBtn"
                layout="@layout/controller_login_btn"/>


        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:text="@string/register_accout"
            android:textColor="@color/gray_normal"
            android:textSize="16sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0.0px"
            android:layout_weight="1.0"/>

        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="40.0dip"
            android:text="@string/forget_psw"
            android:textColor="@color/gray_normal"
            android:textSize="16sp"/>
    </LinearLayout>

    <View
        android:layout_width="1.0dip"
        android:layout_height="0dp"
        android:layout_weight="1.0"/>

    <TextView
        android:id="@+id/tv_more_login"
        android:layout_width="wrap_content"
        android:layout_height="40.0dip"
        android:layout_gravity="center_horizontal"
        android:text="@string/change_way_login"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:visibility="visible"/>

</LinearLayout>